[gd_scene load_steps=2 format=3 uid="uid://bdhgmwwhyk3x1"]

[ext_resource type="Script" path="res://players/group.gd" id="1_pf06x"]

[node name="Group" type="Node2D"]
script = ExtResource("1_pf06x")

[node name="SlotOneLocation" type="Marker2D" parent="."]

[node name="SlotTwoLocation" type="Marker2D" parent="."]
position = Vector2(32, 2.08165e-12)

[node name="SlotThreeLocation" type="Marker2D" parent="."]
position = Vector2(64, 2.08165e-12)

[node name="SlotFourLocation" type="Marker2D" parent="."]
position = Vector2(96, 2.08165e-12)
